file(READ SRC/LKHmain.c filedata)
string(REGEX REPLACE "int main" "int liblkh" filedata "${filedata}")
file(WRITE libLKHmain.c "${filedata}")

add_library(lkhlocal STATIC
SRC/Activate.c
SRC/AddCandidate.c
SRC/AddExtraCandidates.c
SRC/AddTourCandidates.c
SRC/AdjustCandidateSet.c
SRC/AdjustClusters.c
SRC/AllocateStructures.c
SRC/Ascent.c
SRC/BIT.c
SRC/Best2OptMove.c
SRC/Best3OptMove.c
SRC/Best4OptMove.c
SRC/Best5OptMove.c
SRC/BestKOptMove.c
SRC/BestSpecialOptMove.c
SRC/Between.c
SRC/Between_SL.c
SRC/Between_SSL.c
SRC/BridgeGain.c
SRC/BuildKDTree.c
SRC/C.c
SRC/CVRP_InitialTour.c
SRC/CandidateReport.c
SRC/ChooseInitialTour.c
SRC/Connect.c
SRC/CreateCandidateSet.c
SRC/CreateDelaunayCandidateSet.c
SRC/CreateNNCandidateSet.c
SRC/CreateQuadrantCandidateSet.c
SRC/Create_POPMUSIC_CandidateSet.c
SRC/Delaunay.c
SRC/Distance.c
SRC/Distance_MTSP.c
SRC/Distance_SOP.c
SRC/Distance_SPECIAL.c
SRC/ERXT.c
SRC/Excludable.c
SRC/Exclude.c
SRC/FindTour.c
SRC/FixedOrCommonCandidates.c
SRC/Flip.c
SRC/Flip_SL.c
SRC/Flip_SSL.c
SRC/Forbidden.c
SRC/FreeStructures.c
SRC/Gain23.c
SRC/GenerateCandidates.c
SRC/Genetic.c
SRC/GeoConversion.c
SRC/GetTime.c
SRC/GreedyTour.c
SRC/Hashing.c
SRC/Heap.c
SRC/Improvement.c
SRC/IsBackboneCandidate.c
SRC/IsCandidate.c
SRC/IsCommonEdge.c
SRC/IsPossibleCandidate.c
SRC/KSwapKick.c
SRC/LinKernighan.c
SRC/MTSP2TSP.c
SRC/MTSP_InitialTour.c
SRC/MTSP_Report.c
SRC/MTSP_WriteSolution.c
SRC/Make2OptMove.c
SRC/Make3OptMove.c
SRC/Make4OptMove.c
SRC/Make5OptMove.c
SRC/MakeKOptMove.c
SRC/MergeTourWithBestTour.c
SRC/MergeWithTourGPX2.c
SRC/MergeWithTourIPT.c
SRC/Minimum1TreeCost.c
SRC/MinimumSpanningTree.c
SRC/NormalizeNodeList.c
SRC/NormalizeSegmentList.c
SRC/OrderCandidateSet.c
SRC/PDPTW_Reduce.c
SRC/PatchCycles.c
SRC/Penalty_1_PDTSP.c
SRC/Penalty_ACVRP.c
SRC/Penalty_BWTSP.c
SRC/Penalty_CCVRP.c
SRC/Penalty_CVRP.c
SRC/Penalty_CVRPTW.c
SRC/Penalty_M1_PDTSP.c
SRC/Penalty_MTSP.c
SRC/Penalty_M_PDTSP.c
SRC/Penalty_OVRP.c
SRC/Penalty_PDPTW.c
SRC/Penalty_PDTSP.c
SRC/Penalty_PDTSPF.c
SRC/Penalty_PDTSPL.c
SRC/Penalty_RCTVRP.c
SRC/Penalty_SCVRPTW.c
SRC/Penalty_SOP.c
SRC/Penalty_TRP.c
SRC/Penalty_TSPDL.c
SRC/Penalty_TSPPD.c
SRC/Penalty_TSPTW.c
SRC/Penalty_VRPB.c
SRC/Penalty_VRPBTW.c
SRC/Penalty_VRPPD.c
SRC/PrintParameters.c
SRC/Random.c
SRC/ReadCandidates.c
SRC/ReadEdges.c
SRC/ReadLine.c
SRC/ReadParameters.c
SRC/ReadPenalties.c
SRC/ReadProblem.c
SRC/RecordBestTour.c
SRC/RecordBetterTour.c
SRC/RemoveFirstActive.c
SRC/ResetCandidateSet.c
SRC/RestoreTour.c
SRC/SFCTour.c
SRC/SINTEF_WriteSolution.c
SRC/SOP_InitialTour.c
SRC/SOP_RepairTour.c
SRC/SOP_Report.c
SRC/SegmentSize.c
SRC/Sequence.c
SRC/SolveCompressedSubproblem.c
SRC/SolveDelaunaySubproblems.c
SRC/SolveKCenterSubproblems.c
SRC/SolveKMeansSubproblems.c
SRC/SolveKarpSubproblems.c
SRC/SolveRoheSubproblems.c
SRC/SolveSFCSubproblems.c
SRC/SolveSubproblem.c
SRC/SolveSubproblemBorderProblems.c
SRC/SolveTourSegmentSubproblems.c
SRC/Statistics.c
SRC/StatusReport.c
SRC/StoreTour.c
SRC/SymmetrizeCandidateSet.c
SRC/TSPDL_InitialTour.c
SRC/TSPTW_MakespanCost.c
SRC/TSPTW_Reduce.c
SRC/TrimCandidateSet.c
SRC/VRPB_Reduce.c
SRC/WriteCandidates.c
SRC/WritePenalties.c
SRC/WriteTour.c
SRC/eprintf.c
SRC/fscanint.c
SRC/gpx.c
SRC/printff.c
libLKHmain.c)

target_include_directories(lkhlocal PRIVATE SRC/INCLUDE)
target_compile_definitions(lkhlocal PRIVATE TWO_LEVEL_TREE)

add_executable(lkhexe EXCLUDE_FROM_ALL SRC/LKHmain.c)
target_include_directories(lkhexe PRIVATE SRC/INCLUDE)
target_link_libraries(lkhexe lkhlocal)
if(UNIX)
    target_link_libraries(lkhexe m)
endif()
